Changes to sitemaps to promote SEO clean URLs, and edited vipwithcode.html with more concise info.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -30,8 +30,9 @@
 
 		<!-- Meta Description (for SEO) -->
 		<title>Claim Cash Links | OFiDCrypt</title>
-			<!-- Exclude Indexing (for SEO) -->
-			<meta name="robots" content="noindex, nofollow">
+		<!-- Exclude Indexing (for SEO) -->
+		<meta name="robots" content="noindex, nofollow">
+		
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta name="description" content="This member only area is restricted to anyone other than those with a Code Wallet account.">
@@ -42,7 +43,7 @@
 		<meta property="og:title" content="Claim Cash Links | OFiDCrypt">
 		<meta property="og:description" content="This member only area is restricted to anyone other than those with a Code Wallet account.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-		<meta property="og:url" content="https://www.ofidcrypt.com">
+		<meta property="og:url" content="https://www.ofidcrypt.com/cashlinks">
 		<meta property="og:type" content="website">
 	
 		<!-- Twitter Card Meta Tags -->
@@ -50,13 +51,16 @@
 		<meta name="twitter:title" content="Claim Cash Links | OFiDCrypt">
 		<meta name="twitter:description" content="This member only area is restricted to anyone other than those with a Code Wallet account.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-		<meta name="twitter:url" content="https://www.ofidcrypt.com">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/cashlinks">
 	
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		
 		<!-- Specific PNG sizes for modern browsers -->
 		<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
+
+		<!-- Canonical Preferred URL -->
+		<link rel="canonical" href="https://www.ofidcrypt.com/cashlinks">
 
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/main.css">
@@ -120,7 +124,7 @@
 								class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
 								class="label">Instagram</span></a></li>
-					<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands fa-github"><span
+					<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
 								class="label">GitHub</span></a></li>
 				</ul>
 			</nav>
@@ -238,7 +242,7 @@
 										class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
 										class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span
+							<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span
 										class="label">GitHub</span></a></li>
 						</ul>
 					</section>
