--- a/community.html
+++ b/community.html
@@ -41,7 +41,7 @@
 	<meta property="og:title" content="Our Community Connections | OFiDCrypt">
 	<meta property="og:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/community.html">
+	<meta property="og:url" content="https://www.ofidcrypt.com/community">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -49,7 +49,7 @@
 	<meta name="twitter:title" content="Our Community Connections | OFiDCrypt">
 	<meta name="twitter:description" content="Join our vibrant communities to share knowledge, experiences, and grow together. Connect, learn, and engage with us!">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-community-lowres.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/community.html">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/community">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="/favicon.ico">
@@ -58,7 +58,7 @@
 	<link rel="icon" type="image/png" sizes="1600x1600" href="/favicon.png">
 
 	<!-- Canonical Preferred URL -->
-	<link rel="canonical" href="https://www.ofidcrypt.com/community.html">
+	<link rel="canonical" href="https://www.ofidcrypt.com/community">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="/assets/css/main.css">
@@ -119,7 +119,7 @@
 							class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands fa-github"><span
+				<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
 			</ul>
 		</nav>
@@ -237,10 +237,10 @@
 						<article>
 							<header>
 								<span class="date">Coming Soon</span>
-								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin
+								<h2><a href="https://www.ofidcrypt.com/community#community-featured-image">Kin
 										Economy<br /> December Update</a></h2>
 							</header>
-							<a href="https://www.ofidcrypt.com/community.html#community-featured-image"
+							<a href="https://www.ofidcrypt.com/community#community-featured-image"
 								class="image fit"><img src="assets/images/pic02.jpg"
 									alt="Article Title: Kin Monthy Update Coming Soon" /></a>
 							<p><b>This article will be published on Pennypost.</b>
@@ -249,7 +249,7 @@
 								Code app required to purchase from Pennypost, download from <b><a
 										href="https://getcode.com">here</a>.</b></p>
 							<ul class="actions special">
-								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-image"
+								<li><a href="https://www.ofidcrypt.com/community#community-featured-image"
 										class="button">Preview</a></li>
 							</ul>
 						</article>
@@ -257,10 +257,10 @@
 						<article>
 							<header>
 								<span class="date">Coming Soon</span>
-								<h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin
+								<h2><a href="https://www.ofidcrypt.com/community#community-featured-image">Kin
 										Economy<br /> November Update</a></h2>
 							</header>
-							<a href="https://www.ofidcrypt.com/community.html#community-featured-image"
+							<a href="https://www.ofidcrypt.com/community#community-featured-image"
 								class="image fit"><img src="assets/images/pic02.jpg"
 									alt="Article Title: Kin Monthy Update Coming Soon" /></a>
 							<p><b>This article will be published on Pennypost.</b>
@@ -269,7 +269,7 @@
 								Code app required to purchase from Pennypost, download from <b><a
 										href="https://getcode.com">here</a>.</b></p>
 							<ul class="actions special">
-								<li><a href="https://www.ofidcrypt.com/community.html#community-featured-image"
+								<li><a href="https://www.ofidcrypt.com/community#community-featured-image"
 										class="button">Preview</a></li>
 							</ul>
 						</article>
@@ -399,7 +399,7 @@
 									class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
 									class="label">Instagram</span></a></li>
-						<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps"
+						<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events"
 								class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</section>
