--- a/monthly-posts-page2.html
+++ b/monthly-posts-page2.html
@@ -6,15 +6,15 @@
             <article>
                 <header>
                     <span class="date">August 2024</span>
-                    <h2><a href="https://www.ofidcrypt.com/community.html#community-featured-image">Kin Economy<br /> August Update</a></h2>
+                    <h2><a href="https://www.ofidcrypt.com/community#community-featured-image">Kin Economy<br /> August Update</a></h2>
                 </header>
-                <a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="image fit"><img src="assets/images/monthlykin01.png"
+                <a href="https://www.ofidcrypt.com/community#community-featured-image" class="image fit"><img src="assets/images/monthlykin01.png"
                         alt="Article Title: Kin Monthy Update for August" /></a>
                 <p><b>This article is unavailable.</b> Purchases support the writer. 
                     Optionally, you can leave a tip at the end of Pennypost articles to show gratitude to the contributor. 
                     Code app required to purchase from Pennypost, download from <b><a href="https://getcode.com">here</a>.</b></p>
                 <ul class="actions special">
-                    <li><a href="https://www.ofidcrypt.com/community.html#community-featured-image" class="button">Preview</a></li>
+                    <li><a href="https://www.ofidcrypt.com/community#community-featured-image" class="button">Preview</a></li>
                 </ul>
             </article>
 
