--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -42,7 +42,7 @@
 		<meta property="og:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta property="og:description" content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-partners-lowres.webp">
-		<meta property="og:url" content="https://www.ofidcrypt.com/pages/affiliate.html">
+		<meta property="og:url" content="https://www.ofidcrypt.com/pages/affiliate">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
@@ -50,7 +50,7 @@
 		<meta name="twitter:title" content="OFiDCrypt Partners | Forming Collaborative Relationships">
 		<meta name="twitter:description" content="We partner with the best services and tools for simplicity and efficiency, guiding you through your crypto journey with unparalleled clarity. Join us for straightforward access to top-tier crypto solutions.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-partners-lowres.webp">
-		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/affiliate.html">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/affiliate">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -59,7 +59,7 @@
 		<link rel="icon" type="image/png" sizes="1600x1600" href="../favicon.png">
 
 		<!-- Canonical Preferred URL -->
-		<link rel="canonical" href="https://www.ofidcrypt.com/pages/affiliate.html">
+		<link rel="canonical" href="https://www.ofidcrypt.com/pages/affiliate">
 		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -118,7 +118,7 @@
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -241,7 +241,7 @@
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 					</section>
