--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -43,7 +43,7 @@
 	<meta property="og:title" content="Livestream Crypto Contests | OFiDCrypt">
 	<meta property="og:description" content="Participate in OFiDCrypt live events to celebrate creators and engage in activities! Our mission: To introduce you to fun and interactive ways of using your wallet and crypto through earning tips, tipping others, or exploring features of more partner services.">
 	<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
-	<meta property="og:url" content="https://www.ofidcrypt.com/pages/livestream.html">
+	<meta property="og:url" content="https://www.ofidcrypt.com/pages/livestream">
 	<meta property="og:type" content="website">
 
 	<!-- Twitter Card Meta Tags -->
@@ -51,7 +51,7 @@
 	<meta name="twitter:title" content="Livestream Crypto Contests | OFiDCrypt">
 	<meta name="twitter:description" content="Participate in OFiDCrypt live events to celebrate creators and engage in activities! Our mission: To introduce you to fun and interactive ways of using your wallet and crypto through earning tips, tipping others, or exploring features of more partner services.">
 	<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-livestream-lowres.webp">
-	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/livestream.html">
+	<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/livestream">
 
 	<!-- Default ICO file with multiple sizes -->
 	<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -60,7 +60,7 @@
 	<link rel="icon" type="image/png" sizes="1600x1600" href="../favicon.png">
 
 	<!-- Canonical Preferred URL -->
-	<link rel="canonical" href="https://www.ofidcrypt.com/pages/livestream.html">
+	<link rel="canonical" href="https://www.ofidcrypt.com/pages/livestream">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="../assets/css/main.css" />
@@ -122,7 +122,7 @@
 							class="label">Facebook</span></a></li>
 				<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span
 							class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands fa-github"><span
+				<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span
 							class="label">GitHub</span></a></li>
 			</ul>
 		</nav>
@@ -265,7 +265,7 @@
 						<p class="align-center">Click the link below to visit our <b>𝕏 Livestream Events</b> landing page, hosted by Hvr.</p>
 						<p class="align-center"><a href="https://www.ofidcrypt.ca/livestream-kin-contests-ugomxjp">Learn more</a></p>
 						<p class="align-center">You can see the beta documentation for the contest structure <a
-								href="https://github.com/OFiDCrypt/kin-perk-sweeps/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>
+								href="https://github.com/OFiDCrypt/kin-perk-live-events/blob/main/KIN%20Sweepstakes%20-%20Program%20Introduction%20%26%20Whitepaper%20v1.0.0.pdf">here</a>
 						</p>
 					</header>
 				</section>
@@ -342,7 +342,7 @@
 											class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span
 											class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span
+								<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span
 											class="label">GitHub</span></a></li>
 							</ul>
 						</section>
