--- a/pages/about.html
+++ b/pages/about.html
@@ -42,7 +42,7 @@
 		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta property="og:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-		<meta property="og:url" content="https://www.ofidcrypt.com/pages/about.html">
+		<meta property="og:url" content="https://www.ofidcrypt.com/pages/about">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
@@ -50,7 +50,7 @@
 		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
 		<meta name="twitter:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
-		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about.html">
+		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about">
 		
 		<!-- Default ICO file with multiple sizes -->
 		<link rel="icon" type="image/x-icon" href="../favicon.ico">
@@ -59,7 +59,7 @@
 		<link rel="icon" type="image/png" sizes="1600x1600" href="../favicon.png">
 
 		<!-- Canonical Preferred URL -->
-		<link rel="canonical" href="https://www.ofidcrypt.com/pages/about.html">
+		<link rel="canonical" href="https://www.ofidcrypt.com/pages/about">
 		
 		<!-- Stylesheets -->
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -84,7 +84,7 @@
 
 		<!-- Header Subpage-->
 		<header class="header-subpage">
-			<a href="../index.html">
+			<a href="../index">
 				<img src="../assets/images/logo01.png" alt="OFiDCrypt Logo" class="logo">
 			</a>
 		</header>
@@ -118,7 +118,7 @@
 							<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 							<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -234,7 +234,7 @@
 								<li><a href="https://x.com/OFiDCrypt" class="icon brands fa-x-twitter"><span class="label">X</span></a></li>
 								<li><a href="https://www.facebook.com/OFiDCrypt" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.instagram.com/OFiDCrypt/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/OFiDCrypt/Kin-Perk-Sweeps" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/OFiDCrypt/kin-perk-live-events" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</section>
 					</section>
