--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -131,8 +131,8 @@
 								<span class="date">Exclusive Content</span>
 								<h1>Code Wallet<br />
 									Lounge</h1>
-								<p>The Lounge encourages new members to join our community and get started with the Code Wallet app, by enabling access
-									to VIP features such as claimable cash links, live events and more. This dedicated space is accessible by clicking the "Login
+								<p>The Lounge encourages new members to join our community and get started with the Code Wallet app. Gain access
+									to VIP features such as claimable cash links, live events and more. Explore by clicking the "Login
 									with Code" button at the <a href="#get-ahead-section">end of the page</a>
 								</p>
 							</header>
@@ -142,7 +142,7 @@
 									<h2 class="align-center">What is Code Wallet?</h2>
 									<!-- Section Description -->
 									<p class="align-center">Code Wallet is more than just a secure place to store your crypto; it's also a tool for
-										sending and receiving Kin cash among friends. It serves as your gateway to a new generation of online services with
+										sending and receiving Kin among friends. It serves as your gateway to a new generation of online services with
 										a simple swipe-to-sign-in feature. <b>Discover how creators are earning Kin</b> by watching the official trailer from Code
 										Inc. below:</p>
 
@@ -154,7 +154,7 @@
 
 								<p class="align-center">
 									<b>Interact with creator services</b> and purchase content using Kin with just a tap. 
-									For instance, users are using Code Wallet with the Pennypost platform to publish content, 
+									For instance, members are utilizing Code Wallet with the Pennypost platform to publish content, 
 									which is where you'll find 
 									<a href="../index.html#pagination-controls-top">OFiDCrypt Articles</a>. 
 									Follow the link to see how it works for just $0.25 USD of Kin.</p>
