--- a/pages/about.html
+++ b/pages/about.html
@@ -31,24 +31,24 @@
 		</script>
 		
 		<!-- Meta Description (for SEO) -->
-		<title>About OFiDCrypt | Making Crypto Easy</title>
+		<title>About OFiDCrypt | Connect to Crypto via Community & Partners</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta name="description" content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 		<meta name="keywords" content="cryptocurrency, code wallet, vip, OFiDCrypt, crypto community">
 		<meta name="author" content="Tokin ⬢">
 		
 		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="About OFiDCrypt | Making Crypto Easy">
-		<meta property="og:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta property="og:title" content="About OFiDCrypt | Connect to Crypto via Community & Partners">
+		<meta property="og:description" content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com/pages/about">
 		<meta property="og:type" content="website">
 		
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
-		<meta name="twitter:title" content="About OFiDCrypt | Making Crypto Easy">
-		<meta name="twitter:description" content="We will get you up and running with crypto at your own pace, with only a single simple app as entry! You can then get crypto, or not, but either way you can learn and grow with the community.">
+		<meta name="twitter:title" content="About OFiDCrypt | Connect to Crypto via Community & Partners">
+		<meta name="twitter:description" content="We can introduce you to the world of crypto, leveraging tailored articles, live events, and simple partner apps as entry points. You can then choose to get crypto at your own pace and learn and grow with the community.">
 		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com/pages/about">
 		
