--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -179,7 +179,7 @@
 						
 							<!-- Section Heading -->
 							<header id="get-ahead-section">
-								<h2 class="align-center">Get Ahead</h2>
+								<h2 class="align-center">Start Exploring</h2>
 								<p class="align-center">Download the app today to unlock a whole new level of access, interaction and crypto sharing between you, your friends, and the internet. We will grow together.</p>
 								<p class="align-center">🚧 <b>Under Construction</b> 🚧</p>
 							</header>
