Updated Kin monthly news on community and changes cashlink placeholder images and site image.

--- a/cashlinks.html
+++ b/cashlinks.html
@@ -42,7 +42,7 @@
 		<!-- Open Graph Meta Tags -->
 		<meta property="og:title" content="Claim Cash Links | OFiDCrypt">
 		<meta property="og:description" content="This member only area is restricted to anyone other than those with a Code Wallet account.">
-		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+		<meta property="og:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-cashlink-lowres.webp">
 		<meta property="og:url" content="https://www.ofidcrypt.com/cashlinks">
 		<meta property="og:type" content="website">
 	
@@ -50,7 +50,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Claim Cash Links | OFiDCrypt">
 		<meta name="twitter:description" content="This member only area is restricted to anyone other than those with a Code Wallet account.">
-		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/bglogo01.webp">
+		<meta name="twitter:image" content="https://www.ofidcrypt.com/assets/images/webp/bg-cashlink-lowres.webp">
 		<meta name="twitter:url" content="https://www.ofidcrypt.com/cashlinks">
 	
 		<!-- Default ICO file with multiple sizes -->
@@ -141,7 +141,7 @@
 							</header>
 							<div class="quick-start-items">
 								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Wallet Icon"></span>
+									<span class="image left"><img src="/assets/images/cashlink-placeholder.webp" alt="Wallet Icon"></span>
 									<div class="quick-start-content">
 										<h3>⬢ 15,000</h3>
 										<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -152,9 +152,9 @@
 									</div>
 								</article>
 								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Learn Icon"></span>
+									<span class="image left"><img src="/assets/images/cashlink-placeholder.webp" alt="Learn Icon"></span>
 									<div class="quick-start-content">
-										<h3>⬢ 87,413</h3>
+										<h3>⬢ 15,000</h3>
 										<button class="button" onclick="return verifyRecaptchaForLinks(this);">
 											<a href="javascript:void(0);" data-link="https://cash.getcode.com/c/#/e=6onprQ7wJnoBGiyaQjLbyN"
 												onclick="event.preventDefault();">Claim
@@ -163,7 +163,7 @@
 									</div>
 								</article>
 								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/cashlink-test.jpg" alt="Event Icon"></span>
+									<span class="image left"><img src="/assets/images/cashlink-placeholder.webp" alt="Event Icon"></span>
 									<div class="quick-start-content">
 										<h3>⬢ 15,000</h3>
 										<button class="button" onclick="return verifyRecaptchaForLinks(this);">
@@ -187,7 +187,7 @@
 			<footer id="footer">
 				<section>
 					<form method="post" action="https://formspree.io/f/mzzbzojq" onsubmit="return verifyRecaptcha()">
-						<h2 class="centered-heading">Suggest A Topic</h2>
+						<h2 class="centered-heading">Suggest New Features</h2>
 						<div class="fields">
 							<div class="field">
 								<label for="name">Name</label>
