Minor text chanhges to community.html social connections (Flipchat).

--- a/community.html
+++ b/community.html
@@ -173,10 +173,12 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>Join Room #32 <br />
-									on Flipchat</td>
+								<td>Join on Flipchat <br />
+									Room #32</td>
 								<td><a href="https://testflight.apple.com/join/3sDwKbjM">iOS Download (Beta)</a><br />
-								<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Android Download (Beta)</a></td>
+									<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Android Download
+										(Beta)</a>
+								</td>
 							</tr>
 							<tr>
 								<td>Join on Telegram</td>
