Changed format of community.html links and removed Kin community website, under construction. Updated nav Livestream to Live Events.

--- a/community.html
+++ b/community.html
@@ -99,7 +99,7 @@
 				<li><a href="index.html">Learn</a></li>
 				<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
-				<li><a href="pages/livestream.html">Livestream</a></li>
+				<li><a href="pages/livestream.html">Live Events</a></li>
 				<li><a href="pages/affiliate.html">Partners</a></li>
 				<li><a href="pages/about.html">About Us</a></li>
 			</ul>
@@ -173,24 +173,22 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td>Join on Flipchat <br />
-									Room #32</td>
+								<td>Join on <b>Flipchat</b> <br />
+									Room <b>#32</b></td>
 								<td><a href="https://testflight.apple.com/join/3sDwKbjM">iOS Download (Beta)</a><br />
 									<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Android Download
 										(Beta)</a>
 								</td>
 							</tr>
 							<tr>
-								<td>Join on Telegram</td>
+								<td>Follow on <br />
+									<b>𝕏</b></td>
+								<td><a href="https://x.com/OFiDCrypt">@OFiDCrypt</a><br />
+								<a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
+							</tr>
+							<tr>
+								<td>Join on <b>Telegram</b></td>
 								<td><a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a></td>
-							</tr>
-							<tr>
-								<td>Follow on 𝕏</td>
-								<td><a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
-							</tr>
-							<tr>
-								<td>Community Website</td>
-								<td><a href="https://www.kineconomy.com/">kineconomy.com</a></td>
 							</tr>
 						</tbody>
 					</table>
