--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -100,7 +100,7 @@
 							<li><a href="../index.html">Learn</a></li>
 							<li><a href="vipwithcode.html">VIP Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
-							<li><a href="livestream.html">Livestream</a></li>
+							<li><a href="livestream.html">Live Events</a></li>
 							<li class="active"><a href="affiliate.html">Partners</a></li>
 							<li><a href="about.html">About Us</a></li>
 						</ul>
