--- a/cashlinks.html
+++ b/cashlinks.html
@@ -101,7 +101,7 @@
 					<li><a href="index.html">Learn</a></li>
 					<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 					<li><a href="/community.html">Community</a></li>
-					<li><a href="pages/livestream.html">Livestream</a></li>
+					<li><a href="pages/livestream.html">Live Events</a></li>
 					<li><a href="pages/affiliate.html">Partners</a></li>
 					<li><a href="pages/about.html">About Us</a></li>
 				</ul>
