--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 							<li class="active"><a href="index.html">Learn</a></li>
 							<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 							<li><a href="/community.html">Community</a></li>
-							<li><a href="pages/livestream.html">Livestream</a></li>
+							<li><a href="pages/livestream.html">Live Events</a></li>
 							<li><a href="pages/affiliate.html">Partners</a></li>
 							<li><a href="pages/about.html">About Us</a></li>
 						</ul>
