--- a/cashlinks.html
+++ b/cashlinks.html
@@ -98,7 +98,7 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="index.html">Learn</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 					<li><a href="/community.html">Community</a></li>
 					<li><a href="pages/livestream.html">Live Events</a></li>
@@ -176,7 +176,7 @@
 							</div>
 							<div id="recaptchaForLinks" class="g-recaptcha" data-sitekey="6LeHSWsqAAAAABWNk60dgafwA26pWZiQoNi8ZUTa"></div>
 							<ul class="actions special">
-								<li><a href="/pages/vipwithcode.html" class="button">Return to Lounge</a></li>
+								<li><a href="/pages/vipwithcode.html" class="button">Exit to Lounge</a></li>
 							</ul>
 						</section>
 					</header>
