--- a/community.html
+++ b/community.html
@@ -96,7 +96,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Learn</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="pages/vipwithcode.html">VIP Lounge</a></li>
 				<li class="active"><a href="community.html">Community</a></li>
 				<li><a href="pages/livestream.html">Live Events</a></li>
