--- a/pages/vipwithcode.html
+++ b/pages/vipwithcode.html
@@ -97,7 +97,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="../index.html">Learn</a></li>
+							<li><a href="../index.html">Home</a></li>
 							<li class="active"><a href="vipwithcode.html">VIP Lounge</a></li>
 							<li><a href="../community.html">Community</a></li>
 							<li><a href="livestream.html">Live Events</a></li>
