--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -141,10 +141,15 @@
 			<!-- X Publish Adaptation  -->
 			<section class="livestream">
 				<div class="stream video main">
-					<blockquote class="twitter-tweet video main"  data-media-max-width="1920">
-						<p lang="en" dir="ltr"><a href="https://t.co/x243uX0ZIV"></a></p>
-						<p><a href="https://twitter.com/OFiDCrypt/status/1857192873197715888?ref_src=twsrc%5Etfw"></a></p>
+					<blockquote class="twitter-tweet" data-media-max-width="1920">
+						<p lang="en" dir="ltr">6:30 PM | DiscoCar Games - Space Thugs with ChefmusicCool: Developers, streamers and content
+							creators can keep 100% of Tips with <a href="https://twitter.com/getcode?ref_src=twsrc%5Etfw">@getcode</a><a
+								href="https://twitter.com/search?q=%24Kin&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$Kin</a><br>.<br>.<a
+								href="https://t.co/pEtDFcy5L3">https://t.co/pEtDFcy5L3</a> <a
+								href="https://t.co/MU1JGVf3R9">https://t.co/MU1JGVf3R9</a></p>&mdash; Tokin ⬢ (@OFiDCrypt) <a
+							href="https://twitter.com/OFiDCrypt/status/1869568434507231455?ref_src=twsrc%5Etfw">December 19, 2024</a>
 					</blockquote>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 	
