--- a/pages/livestream.html
+++ b/pages/livestream.html
@@ -146,9 +146,10 @@
 							creators can keep 100% of Tips with <a href="https://twitter.com/getcode?ref_src=twsrc%5Etfw">@getcode</a><a
 								href="https://twitter.com/search?q=%24Kin&amp;src=ctag&amp;ref_src=twsrc%5Etfw">$Kin</a><br>.<br>.<a
 								href="https://t.co/pEtDFcy5L3">https://t.co/pEtDFcy5L3</a> <a
-								href="https://t.co/MU1JGVf3R9">https://t.co/MU1JGVf3R9</a></p>&mdash; Tokin ⬢ (@OFiDCrypt) <a
-							href="https://twitter.com/OFiDCrypt/status/1869568434507231455?ref_src=twsrc%5Etfw">December 19, 2024</a>
+								href="https://t.co/KVIwpyXZaO">https://t.co/KVIwpyXZaO</a></p>&mdash; Tokin ⬢ (@OFiDCrypt) <a
+							href="https://twitter.com/OFiDCrypt/status/1869573413976576185?ref_src=twsrc%5Etfw">December 19, 2024</a>
 					</blockquote>
+					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
