Formatting changes (minor).

--- a/community.html
+++ b/community.html
@@ -175,9 +175,8 @@
 							<tr>
 								<td>Join on <b>Flipchat</b> <br />
 									Room <b>#32</b></td>
-								<td><a href="https://testflight.apple.com/join/3sDwKbjM">iOS Download (Beta)</a><br />
-									<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Android Download
-										(Beta)</a>
+								<td><a href="https://testflight.apple.com/join/3sDwKbjM">Get iOS (Beta)</a><br />
+									<a href="https://appdistribution.firebase.google.com/pub/i/9fb1e93e29952772">Get Android (Beta)</a>
 								</td>
 							</tr>
 							<tr>
@@ -187,7 +186,8 @@
 								<a href="https://x.com/Kin_Ecosystem">@Kin_Ecosystem</a></td>
 							</tr>
 							<tr>
-								<td>Join on <b>Telegram</b></td>
+								<td>Join on <br />
+									<b>Telegram</b></td>
 								<td><a href="https://t.me/KinCryptoTelegram">Kin Crypto Official</a></td>
 							</tr>
 						</tbody>
