--- a/index.html
+++ b/index.html
@@ -178,32 +178,31 @@
 						<!-- Quick Start Section -->
 						<section class="quick-start-section">
 							<header>
-								<h2>Quick Start <br />
-									Links</h2>
+								<h2>Quick Start</h2>
 							</header>
 							<div class="quick-start-items">
-								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/code-promo01.png" alt="Wallet Icon"></span>
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/code-promo01.png"
+											alt="Wallet Icon"></span>
 									<div class="quick-start-content">
-										<h3>Get your Wallet</h3>
-										<p class="align-center">A Partner App by Code Inc.</p>
-										<button class="button"><a href="https://getcode.com/#download-1">Download</a></button>
+										<h3 class="quick-start-title">Get your Wallet</h3>
+										<p class="align-center">A Partner App by Code Inc.</p> <button class="button"><a
+												href="https://getcode.com/#download-1">Download</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/bg-articles-lowres-square.png" alt="Learn Icon"></span>
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/bg-articles-lowres-square.png"
+											alt="Learn Icon"></span>
 									<div class="quick-start-content">
-										<h3>Learn about Crypto</h3>
-										<p class="align-center">By OFiDCrypt</p>
-										<button class="button"><a href="/index.html#pagination-controls-top">Go to Articles</a></button>
+										<h3 class="quick-start-title">Learn about Crypto</h3>
+										<p class="align-center">By OFiDCrypt</p> <button class="button"><a
+												href="/index.html#pagination-controls-top">Go to Articles</a></button>
 									</div>
 								</article>
-								<article class="quick-start-item">
-									<span class="image left"><img src="/assets/images/logokin01.jpg" alt="Event Icon"></span>
+								<article class="quick-start-item"> <span class="image left"><img src="/assets/images/logokin01.jpg"
+											alt="Event Icon"></span>
 									<div class="quick-start-content">
-										<h3>Join Live Events</h3>
-										<p class="align-center">Via Perk.Exchange</p>
-										<button class="button"><a href="/pages/livestream.html#about-contests">Learn More</a></button>
+										<h3 class="quick-start-title">Join Live Events</h3>
+										<p class="align-center">Via Perk.Exchange</p> <button class="button"><a
+												href="/pages/livestream.html#about-contests">Learn More</a></button>
 									</div>
 								</article>
 							</div>
@@ -219,8 +218,7 @@
 							</article>
 						</section>
 							<header id="Guide">
-								<h2>Quick Start <br />
-									Guide</h2>
+								<h2>Guide</h2>
 								<!-- Section Description -->
 								<p>Coming Soon</p>
 								<p class="align-center">🚧 <b>Under Construction</b> 🚧</p>
