Minor formatting adjustment.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 							<article class="quick-start-item quick-start-featured">
 								<span class="image left"><img src="/assets/images/cashlink-tile.png" alt="Featured Icon"></span>
 								<div class="quick-start-content">
-									<h3>Claim Cash</h3>
+									<h3 class="quick-start-title">Claim Cash</h3>
 									<p class="align-center">Fill Your Wallet</p>
 									<button class="button"><a href="/cashlinks.html">Go to Cashlinks</a></button>
 								</div>
