Add community ad banner and css

--- a/community.html
+++ b/community.html
@@ -160,6 +160,14 @@
 						</div>
 					</article>
 				</section>
+				
+				<!-- Ad Banner -->
+				<section id="kin-money" class="ad-banner">
+					<div style="text-align: center;">
+							<img src="/assets/images/kin-ad-banner.png" alt="Ad Banner" style="max-width: 100%; height: auto;">
+						</a>
+					</div>
+				</section>
 
 				<!-- Community Links Table -->
 				<section class="community-links">
